--- a/index.html
+++ b/index.html
@@ -37,18 +37,25 @@
       image-rendering: pixelated;
     }
   </style>
+  <script>
+    // Shim process for browser environment to prevent crash on process.env.API_KEY
+    window.process = window.process || { env: {} };
+  </script>
 <script type="importmap">
 {
   "imports": {
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "react": "https://esm.sh/react@^19.2.3",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client"
   }
 }
 </script>
 </head>
 <body>
   <div id="root"></div>
+  <!-- Main entry point -->
+  <script type="module" src="./index.tsx"></script>
 </body>
 </html>
