--- a/index.html
+++ b/index.html
@@ -14,48 +14,57 @@
       font-family: 'Fredoka', sans-serif;
       margin: 0;
       overflow: hidden;
-      background-color: #000;
+      background-color: #0f172a;
     }
-    @keyframes flap {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-5px); }
+    /* Plane Engine Vibration */
+    @keyframes engine-vibration {
+      0%, 100% { transform: translate(-50%, -50%) translateY(0px); }
+      50% { transform: translate(-50%, -50%) translateY(-2px); }
     }
-    .animate-flap {
-      animation: flap 0.2s ease-in-out infinite;
+    .animate-plane {
+      animation: engine-vibration 0.05s linear infinite;
     }
+    /* Subtle UI Bounce */
+    @keyframes bounce-subtle {
+      0%, 100% { transform: scale(1.1) translateY(0); }
+      50% { transform: scale(1.1) translateY(-10px); }
+    }
+    .animate-bounce-subtle {
+      animation: bounce-subtle 2s ease-in-out infinite;
+    }
+    /* Parallax Clouds */
     @keyframes cloud-scroll {
       from { transform: translateX(0); }
       to { transform: translateX(-50%); }
     }
     .parallax-bg {
-      animation: cloud-scroll 20s linear infinite;
+      animation: cloud-scroll 30s linear infinite;
     }
     .parallax-fg {
-      animation: cloud-scroll 10s linear infinite;
+      animation: cloud-scroll 15s linear infinite;
     }
     canvas {
       image-rendering: pixelated;
     }
   </style>
   <script>
-    // Shim process for browser environment to prevent crash on process.env.API_KEY
-    window.process = window.process || { env: {} };
+    window.process = { env: { API_KEY: "" } };
   </script>
-<script type="importmap">
+  <script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react/": "https://esm.sh/react@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@1.34.0",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
 </head>
 <body>
   <div id="root"></div>
-  <!-- Main entry point -->
   <script type="module" src="./index.tsx"></script>
 </body>
 </html>
