--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&display=swap" rel="stylesheet">
+  
+  <!-- Babel Standalone for on-the-fly TSX transpilation -->
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  
   <style>
     body {
       font-family: 'Fredoka', sans-serif;
@@ -16,7 +20,6 @@
       overflow: hidden;
       background-color: #0f172a;
     }
-    /* Plane Engine Vibration */
     @keyframes engine-vibration {
       0%, 100% { transform: translate(-50%, -50%) translateY(0px); }
       50% { transform: translate(-50%, -50%) translateY(-2px); }
@@ -24,7 +27,6 @@
     .animate-plane {
       animation: engine-vibration 0.05s linear infinite;
     }
-    /* Subtle UI Bounce */
     @keyframes bounce-subtle {
       0%, 100% { transform: scale(1.1) translateY(0); }
       50% { transform: scale(1.1) translateY(-10px); }
@@ -32,7 +34,6 @@
     .animate-bounce-subtle {
       animation: bounce-subtle 2s ease-in-out infinite;
     }
-    /* Parallax Clouds */
     @keyframes cloud-scroll {
       from { transform: translateX(0); }
       to { transform: translateX(-50%); }
@@ -40,16 +41,24 @@
     .parallax-bg {
       animation: cloud-scroll 30s linear infinite;
     }
-    .parallax-fg {
-      animation: cloud-scroll 15s linear infinite;
-    }
     canvas {
       image-rendering: pixelated;
     }
   </style>
+
   <script>
+    // Critical: Shim process for the Gemini SDK
     window.process = { env: { API_KEY: "" } };
+    
+    // Configure Babel to support TypeScript and React
+    Babel.registerPreset('env-plus', {
+      presets: [
+        [Babel.availablePresets['typescript'], { allExtensions: true, isTSX: true }],
+        [Babel.availablePresets['react'], { runtime: 'classic' }]
+      ]
+    });
   </script>
+
   <script type="importmap">
 {
   "imports": {
@@ -65,6 +74,7 @@
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="./index.tsx"></script>
+  <!-- Using text/babel with data-type="module" to bypass GitHub's MIME restrictions -->
+  <script type="text/babel" data-type="module" data-presets="env-plus" src="./index.tsx"></script>
 </body>
 </html>
